# EEG

./: .gitignore  README.md  README_OLD.md  ex1.ipynb  ex1.py  pyproject.toml  requirements.txt  run_decoding_all_derivatives.sh  run_full_pipeline.py  run_new_pipe.sh
code/: 01_preprocess.py  02_decoding.py  03_plot_decoding_results.py  04_behavior_analysis.py  05_rank_model_runs.py  aggregate_decoding.py  compare_preprocessing.py  config_decoding.yaml  config_preprocessing.yaml  decoding.py  decoding_config.yaml  plot_config.yaml  plot_results.py  preprocess_config.yaml  preprocessing.py  read_data.py  read_fif.py  step1_preprocessing.py
code_new/: 00_convert_bids.py  01_preprocess.py  03_diagnosis.py  04_features.py  05_decoding.py  06_markov.py  07_plot_paper_fig1.py  08_plot_paper_fig2_3.py  09_model_comparison.py  10_continuous_analysis.py  11_time_gen.py  12_extension_plots.py  check_balance.py  check_baseline.py  check_channels.py  config.yaml  notes.md  old_01_plotPreprocessing.py  old_01_preprocessing.py  old_config.yaml  visualize.py
code_new2/: 01_preprocess.py  02_alt_decoding_slidingwindow.py  02_decoding.py  03_plot_decoding_results.py  config_decoding.yaml  config_preprocessing.yaml
debug/: DEBUG_REPORT.md  DECODING_DEBUG_REPORT.md  PREPROCESSING_DEBUG_REPORT.md  debug_step1.py  debug_step2.py  debug_step2_angepasstesResampling.py  debug_step3_eigeneInterp.py  debug_step3_interp.py  debug_step4_features.py  debug_step5_decoding.py  debug_step5_decoding_exactMatch.py
originalCode/: debug_step1_trl.mat  debug_step2_resamp.mat  debug_step2b_results.mat  (+6 more)
(+43 files in other folders)
